#14638 closed bug (fixed)
resizing terminal window results in pkgman download ssl errors
Reported by: | kallisti5 | Owned by: | pulkomandy |
---|---|---|---|
Priority: | critical | Milestone: | R1/beta2 |
Component: | Kits/Network Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Change History (6)
comment:1 by , 6 years ago
Component: | Kits/Package Kit → Kits/Network Kit |
---|---|
Owner: | changed from | to
Status: | new → assigned |
comment:2 by , 6 years ago
Signals interrupt syscalls. Don't you love unix? Resizing the terminal is notified to the app through SIGWINCH. We handle this to manage the progress bar, I think?
comment:3 by , 6 years ago
Probably it should just behave like wget does: https://github.com/haikuports/haikuports/blob/master/net-misc/wget/patches/wget-1.19.5.patchset#L177
comment:6 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Wat.